--- a/SDL-gsoc2010_shaped_windows.mediawiki
+++ b/SDL-gsoc2010_shaped_windows.mediawiki
@@ -44,11 +44,11 @@ Here some other sample code:
 
 ==== Layered Window ====
 
-Now there is another way to provide transparency using a alpha-bitmap in Windows. The API now is the UpdateLayeredWindow() call:
+Now there is another way to provide transparency using an alpha-bitmap in Windows. The API to be used is the UpdateLayeredWindow() call:
 * MSDN info: http://msdn.microsoft.com/en-us/library/ms633556%28VS.85%29.aspx
 * Sample code: http://www.nuonsoft.com/blog/2009/05/27/how-to-use-updatelayeredwindow/
 
-Even with this approach a shape may still be important to get rid of clicks to the window - a window that is almost transparent (i.e. alpha=1) seems to have no shape, but will still receive clicks on those pixels. Note also, that the layered window API is not supported on WinCE (but the shape API is).
+Even with this approach a shape vector may still be important, to get rid of clicks to the window - a window that is almost transparent (i.e. alpha=1) seems to have no shape, but will still receive clicks on those pixels. Note also, that the layered window API is not supported on WinCE (but the shape API is).
 
 === OSX ===
 
