--- a/CategoryMutex.mediawiki
+++ b/CategoryMutex.mediawiki
@@ -7,10 +7,12 @@
 
 Primary Include:  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_mutex.h SDL_mutex.h]
 
-Other Includes:  SDL_stdinc.h, SDL_error.h
+Other Includes:  SDL_thread.h, SDL_stdinc.h, SDL_error.h
 
 
 == Introduction ==
+
+^Mutex functions are used to coordinate multiple threads using or calling the same resource to avoid interference that may cause instability in the program.  Threads take turns locking (accessing) the resource one at a time.  Waiting threads are queued up based on the mutex algorithm and take their turn locking (accessing) the shared resource as each previous function unlocks (releases) the resource.^
 
 Functions in this group provide thread synchronization primitives for functions in the [[CategoryThreads]] group.
 
