--- a/SDL_Quit.mediawiki
+++ b/SDL_Quit.mediawiki
@@ -17,7 +17,29 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+You should call this function even if you have already shutdown each initialized subsystem with [[SDL_QuitSubSystem]]().
+
+If you start a subsystem using a call to that subsystem's init function (for example [[SDL_VideoInit]]()) instead of [[SDL_Init]]() or [[SDL_InitSubSystem]](), then you must use that subsystem's quit function ([[SDL_VideoQuit]]()) to shut it down before calling SDL_Quit().
+
+You can use this function with atexit() to ensure that it is run when your application is shutdown, but it is not wise to do this from a library or other dynamically loaded code. 
+
+== Examples ==
+```c++
+#include "SDL.h"
+#include <stdio.h>
+
+int main(int argc, char** argv) {
+    if (SDL_Init(SDL_INIT_EVERYTHING) != 0) {
+        fprintf(stderr, "Unable to initialize SDL:  %s\n", SDL_GetError());
+        return 1;
+    }
+    atexit(SDL_Quit);
+
+    /* ... */
+
+    return 0;
+}
+```
 
 == Related Functions ==
 :[[SDL_Init]]
