--- a/SDL_QuitSubSystem.mediawiki
+++ b/SDL_QuitSubSystem.mediawiki
@@ -42,12 +42,12 @@ int main(int argc, char **argv) {
 ```
 
 == Remarks ==
-<span id="flags"></span>These are the flags which may be passed to SDL_QuitSubSystem() and may be OR'd together to quit multiple subsystems simultaneously. 
+<span id="flags"></span>These are the flags which may be passed to [[SDL_QuitSubSystem]]() and may be OR'd together to quit multiple subsystems simultaneously. 
 <<Include(SDL_Init, , , from="OR'd together.", to="== Return Value ==")>>
 
-If you start a subsystem using a call to that subsystem's init function (for example [[SDL_VideoInit]]()) instead of [[SDL_Init]]() or [[SDL_InitSubSystem]](), SDL_QuitSubSystem() and [[SDL_WasInit]]() will not work.  You will need to use that subsystem's quit function ([[SDL_VideoQuit]]()) directly instead.
+If you start a subsystem using a call to that subsystem's init function (for example [[SDL_VideoInit]]()) instead of [[SDL_Init]]() or [[SDL_InitSubSystem]](), [[SDL_QuitSubSystem]]() and [[SDL_WasInit]]() will not work.  You will need to use that subsystem's quit function ([[SDL_VideoQuit]]()) directly instead.
 
-You still need to call [[SDL_Quit]]() even if you close all open subsystems with SDL_QuitSubSystem.
+You still need to call [[SDL_Quit]]() even if you close all open subsystems with [[SDL_QuitSubSystem]]().
 
 == Related Functions ==
 :[[SDL_InitSubSystem]]
