--- a/SDL_SemTryWait.mediawiki
+++ b/SDL_SemTryWait.mediawiki
@@ -32,6 +32,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_SemWait]]
+:[[SDL_SemWaitTimeout]] ???
 
 ----
 [[CategoryAPI]], [[CategoryMutex]]
