--- a/SDL_SemWait.mediawiki
+++ b/SDL_SemWait.mediawiki
@@ -30,6 +30,7 @@ You can add your code example here
 
 == Related Functions ==
 :[[SDL_SemTryWait]] ???
+:[[SDL_SemWaitTimeout]] ???
 
 ----
 [[CategoryAPI]], [[CategoryMutex]]
