--- a/SDL_CondSignal.mediawiki
+++ b/SDL_CondSignal.mediawiki
@@ -29,7 +29,7 @@ You can add your code example here
 ''You can add useful comments here''
 
 == Related Functions ==
-:[[SDL_CondBroadcast]]
+:[[SDL_CondBroadcast]] ???
 
 ----
 [[CategoryAPI]], [[CategoryMutex]]
