--- a/Tutorials.mediawiki
+++ b/Tutorials.mediawiki
@@ -59,3 +59,6 @@ There are a number of SDL tutorials available from different sources.
 
 * [http://kekkai.org/roger/sdl/ Roger's SDL Tutorials]
 : SDL_mixer, SDL_RWops
+
+* [http://ansuz.sooke.bc.ca/software/sdl-condvars.php Condition variables in SDL]
+: A good discussion of condition variables, in computer science rather than gaming context. Some mention of mutex and semaphore use.
