--- a/CategoryPixels.mediawiki
+++ b/CategoryPixels.mediawiki
@@ -2,8 +2,14 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
+'''DRAFT'''
 
-== Pixel Formats and Conversion Routines (SDL_pixels.h) ==
+= Pixel Formats and Conversion Routines =
+'''Primary Include''': [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_pixels.h SDL_pixels.h]
+
+== Introduction ==
+
+== Functions ==
 
 <<FullSearchCached(category:CategoryPixels)>>
 
