--- a/CategoryRect.mediawiki
+++ b/CategoryRect.mediawiki
@@ -2,8 +2,16 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
+'''DRAFT'''
 
-== Rectangle Functions (SDL_rect.h) ==
+= Rectangle Functions =
+
+'''Primary Include:''' [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rect.h SDL_rect.h]
+
+
+== Introduction ==
+
+== Functions ==
 
 <<FullSearchCached(category:CategoryRect)>>
 
