--- a/CategoryAudio.mediawiki
+++ b/CategoryAudio.mediawiki
@@ -2,10 +2,18 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
+'''DRAFT'''
 
-== Audio Device Management, Playing and Recording (SDL_audio.h) ==
+= Audio Device Management, Playing and Recording =
 
-<<FullSearchCached(category:CategoryAudio)>>
+'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_audio.h SDL_audio.h]
+
+
+== Introduction ==
+
+== Functions ==
+
+<<FullSearch(category:CategoryAudio)>>
 
 ----
 CategoryCategory
