--- a/CategoryIO.mediawiki
+++ b/CategoryIO.mediawiki
@@ -2,10 +2,11 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
+'''DRAFT'''
 
 = File I/O Abstraction =
 
-Primary Include:  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rwops.h SDL_rwops.h]
+'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_rwops.h SDL_rwops.h]
 
 Other Includes: SDL_stdinc.h, SDL_error.h 
 
