--- a/CategoryThread.mediawiki
+++ b/CategoryThread.mediawiki
@@ -2,10 +2,11 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
+'''DRAFT'''
 
 = Thread Management =
 
-Primary Include: [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_thread.h SDL_thread.h]
+'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_thread.h SDL_thread.h]
 
 Other Includes:  SDL_stdinc.h, SDL_error.h,
 : SDL_mutex.h (contains thread synchronization primitives)
