--- a/CategoryTimer.mediawiki
+++ b/CategoryTimer.mediawiki
@@ -2,10 +2,11 @@
 <!-- #master-date:Unknown-Date -->
 <!-- format wiki -->
 <!-- language en -->
+'''DRAFT'''
 
 = Timer Support =
 
-Primary Include:  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_timer.h SDL_timer.h]
+'''Primary Include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_timer.h SDL_timer.h]
 
 
 == Introduction ==
