--- a/CategoryPlatform.mediawiki
+++ b/CategoryPlatform.mediawiki
@@ -5,11 +5,10 @@
 {|
 |<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
 |}
-<<Color2(green,Yet another possible format for these pages.)>>
 
 = Platform Detection =
 
-Primary include file:  '''SDL_platform.h'''
+'''Primary include:'''  [http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_platform.h SDL_platform.h]
 
 Optional includes:  begin_code.h, close_code.h 
 
